# feedbackflow

./: .gitignore  Add Feedback to Composer.command  MCP_README.md  README.md  TODO.md  add_feedback.bat  add_feedback.sh  add_feedback_to_composer.py  background.js  check_extension.py  clear_feedback.py  content.js  create_icons.py  extension.js  feedback_log_for_composer.txt  feedbackflow-cli.js  feedbackloop-api.js  ff  ff-mcp  ff.bat  ff.py  install_global.js  install_mcp.py  manifest.json  mcp_server.py  package.json  popup.css  popup.html  popup.js  pyproject.toml  read_feedback.py  run_mcp_server.py  setup.cfg  setup.py  update_extension_id.py  user_copilot_instructions_template.md  user_cursorrules_template.json  watch_and_add_feedback.py
chrome-extension/: feedbackflow-api.js  popup.html  popup.js
cli/: ff.py  install_ff_globally.py
feedbackflow/: __init__.py  cli.py
mcp/: install_mcp.py
native-host/: com.feedbackflow.host.json.example  com.feedbackloop.host.json  feedbackflow_host.py  feedbackloop_host.py  install_host.py
sample-website/: index.html  script.js  styles.css
scripts/: add_feedback_to_composer.py  check_extension.py  create_icons.py  read_feedback.py  watch_and_add_feedback.py
