[metadata]
name = feedbackflow
version = 1.0.0
description = A Chrome extension that allows you to send feedback from your website to your AI assistant
author = FeedbackFlow Team
author_email = info@feedbackflow.com
url = https://github.com/feedbackflow/feedbackflow
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pillow

[options.entry_points]
console_scripts =
    ff = feedbackflow.ff:main 